--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,9 @@
-body {
-  background-color: blue;
+.custom-nav {
+  padding-left:30px;
+  padding-right:30px;
+}
+
+.navbar-nav > li {
+  padding-left:30px;
+  padding-right:30px;
 }
