--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,10 +1,8 @@
 .top-section {
  background-image: url("../../images/3.jpeg");
  background-repeat: no-repeat;
- /* width: 100%; */
  height: inherit;
  padding-bottom: 30px;
-
 }
 
 .upper-head h3 {
@@ -30,13 +28,13 @@
   padding-left: 30px;
   padding-right: 30px;
 }
- header {
+
+header {
    padding-top: 40px;
    text-align: center;
  }
 
 .header-text-a {
-  /* font-family: 'Lato', sans-serif; */
   font-size: 20px;
   font-weight: bold 600;
   line-height: 32px;
@@ -45,9 +43,6 @@
 }
 
 .header-text-b {
-  /* font-family: 'Lato', sans-serif; */
-  /* font-style: normal; */
-  /* font-weight: normal; */
   font-size: 35px;
   font-weight: bolder 900;
   line-height: 50px;
@@ -60,9 +55,6 @@
 }
 
 .header-text-c {
-  /* font-family: 'Lato', sans-serif; */
-  /* font-style: normal; */
-  /* font-weight: normal; */
   font-size: 15px;
   line-height: 20px;
   padding: 10px;
@@ -80,7 +72,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-
 }
 
 .middle-section-head {
@@ -91,7 +82,7 @@
 
 }
 
-.middle-section-head h2{
+.middle-section-head h2 {
   font-size: 30px;
   font-weight: bold 600;
   line-height: 32px;
@@ -103,7 +94,6 @@
   justify-content: center;
   text-align: center;
   padding: 20px;
-
 }
 
 .top-program-2 {
@@ -111,7 +101,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  border: 3px solid red;
+  border: 3px solid #ec5242;
   margin: 20px;
   height: 120px;
 }
@@ -144,8 +134,6 @@
   margin: 20px;
   height: 250px;
 }
-
-/* ..... */
 
 .bottom-section-head {
   display: flex;
@@ -221,7 +209,6 @@ input[type="checkbox"] {
 }
 
 label {
-  /* color: blue; */
   background-color: #ec5242;
   text-decoration: underline;
   margin-top: 10px;
@@ -231,19 +218,16 @@ label {
 
 label:after {
   content: "more";
-  /* background-color: #ec5242; */
 }
 
 input:checked~label:after {
   content: "less";
-  /* background-color: #ec5242; */
 }
 
 .inner {
   max-height: 400px;
   overflow: hidden;
   transition: all .3s ease;
-  /* width: 100px; */
 }
 
 input:checked+.inner {
@@ -256,7 +240,6 @@ input:checked+.inner {
 
 .show-more {
   border-radius: 0;
-  /* background-color: #ec5242; */
   text-align: center;
   width: 100%;
 }
@@ -272,7 +255,6 @@ input:checked+.inner {
 }
 
 .foot {
-  /* margin: 5px; */
   text-align: center;
 }
 
@@ -283,7 +265,6 @@ input:checked+.inner {
 
 .footb {
   margin: 50px 5px 10px 5px;
-  /* text-align: right; */
 }
 
 /* footer section */
