desktop home page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,10 @@
   padding-bottom: 30px;
 }
 
+.desktop-nav {
+  display: none;
+}
+
 #mynav {
   width: 48vh;
   opacity: 1;
@@ -45,7 +49,7 @@ header {
 }
 
 .header-tect-c-div {
-  border: 3px solid #ec5242;
+  border: 3px solid #fff;
   margin: 10px;
 }
 
@@ -91,6 +95,8 @@ header {
 .top-program-1 {
   display: flex;
   flex-direction: row;
+  background: rgba(0, 128, 0, 0.1);
+  margin: 10px;
 }
 
 .top-program {
@@ -98,7 +104,7 @@ header {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 15px;
+  margin-top: 15px;
 }
 
 .top-program img {
@@ -122,8 +128,73 @@ header {
   color: #fff;
 }
 
+@media screen and (min-width: 768px) {
+  .custom-nav {
+    display: none;
+  }
+
+  .desktop-nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .social-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content:flex-end;
+    padding-right: 100px;
+    background-color: #272a31;
+  }
+
+  .custom-nav-brand {
+    margin-left: 120px;
+  }
+
+  .social-nav > * {
+    margin: 10px;
+    text-decoration: none;
+    color: #fff;
+  }
+
+  .social-nav > *:hover {
+    color: #ec5242;
+  }
+
+  .inside-desktop-nav {
+    display: flex !important;
+    flex-direction: row;
+    justify-content: flex-end;
+    /* padding-right: 70px; */
+  }
+
+  .inside-desktop-nav ul > * {
+    margin: 0;
+    padding: 5px 10px 5px 10px;
+  }
+
+  .special-list {
+    border: 2px solid #ec5242;
+  }
+
+  .top-section {
+    background-image: url("../../images/desktop-bg.png");
+    background-repeat: no-repeat;
+  }
+
+  .desktop-custom-head {
+    width: 60%;
+    padding-left: 0;
+    margin-left: 180px;;
+    padding-right: 90px;
+  }
+}
+
 .middle-section-container:last-child {
   padding: 0 40px 0 40px;
+}
+
+#desktop-middle-section-btn {
+  display: none;
 }
 
 #middle-section-btn {
@@ -141,7 +212,7 @@ header {
 
 .bottom-section-head h2 {
   margin-top: 50px;
-  color: #fff;
+  color: #000;
 }
 
 .bottom-section-head hr {
@@ -186,6 +257,7 @@ header {
 .top-feature-2 h6 {
   font-size: 13px;
   line-height: 15px;
+  color: #ec5242;
 }
 
 .top-feature-2 hr {
@@ -243,6 +315,25 @@ input:checked + .inner {
   height: 400px;
 }
 
+.bottom-partner-head {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+.bottom-partner-head hr {
+  width: 30%;
+  color: #ec5242;
+  margin: 15px auto;
+}
+
+.bottom-partner-head h2 {
+  margin: 50px auto;
+  color: #fff;
+}
+
 .footer-img {
   width: 70px;
   height: 60px;
@@ -259,6 +350,57 @@ input:checked + .inner {
 
 .footb {
   margin: 50px 5px 10px 5px;
+}
+
+@media screen and (min-width: 768px) {
+  /* .middle-section {
+    padding-left: 10px;
+  } */
+
+  .top-program {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 15px;
+  }
+
+  .top-program-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    column-gap: 20px;
+    margin: 3px;
+    padding: 20px
+  }
+
+  .top-program-2 p {
+    font-size: 12px;
+    line-height: 14px;
+  }
+
+  #middle-section-btn {
+    display: none;
+  }
+
+  #desktop-middle-section-btn {
+    display: flex;
+    margin: 20px auto;
+    background-color: #none;
+    text-align: center;
+    width: 30%;
+  }
+
+  #desktop-middle-section-btn  a {
+    text-decoration: none;
+  }
+
+  .show-more {
+    display: none;
+  }
+
+  .bottom-partner-head {
+    width: 100%;
+  }
 }
 
 /* footer section */
