--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -164,12 +164,12 @@ header {
     display: flex !important;
     flex-direction: row;
     justify-content: flex-end;
-    /* padding-right: 70px; */
+    /* padding-right: 50px; */
   }
 
   .inside-desktop-nav ul > * {
     margin: 0;
-    padding: 5px 10px 5px 10px;
+    padding: 5px 0 5px 10px;
   }
 
   .special-list {
@@ -353,9 +353,15 @@ input:checked + .inner {
 }
 
 @media screen and (min-width: 768px) {
-  /* .middle-section {
-    padding-left: 10px;
-  } */
+  .middle-section-container {
+    padding-left: 20px;
+  }
+
+  .inner-middle-section-container {
+    text-align: center;
+    margin: auto;
+    padding-left: 40px;
+  }
 
   .top-program {
     display: flex;
@@ -390,8 +396,8 @@ input:checked + .inner {
     width: 30%;
   }
 
-  #desktop-middle-section-btn  a {
-    text-decoration: none;
+  #desktop-middle-section-btn  a {inner-middle-section-containe
+    color: #fff;
   }
 
   .show-more {
@@ -415,4 +421,20 @@ footer {
 
 #hide {
   display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .foot,
+  .foota,
+  .footb {
+    text-align: center;
+    margin: 50px 5px 10px 5px;
+  }
+
+  .footer-container {
+    text-align: center;
+    margin: 40px auto;
+    width: 95%;
+    margin-left: 60px;
+  }
 }
