--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -9,6 +9,10 @@
   margin-top: 20px;
 }
 
+.desktop-nav {
+  display: none;
+}
+
 #mynav {
   width: 48vh;
   opacity: 1;
@@ -49,7 +53,7 @@ header {
 }
 
 .header-tect-c-div {
-  border: 3px solid red;
+  border: 3px solid #fff;
   margin: 10px;
 }
 
@@ -64,6 +68,88 @@ header {
   line-height: 20px;
   color: #42526e;
   margin-top: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .header-text-a {
+    display: none;
+  }
+
+  .header-text-b {
+    padding: 20px;
+  }
+
+  .custom-nav {
+    display: none;
+  }
+
+  .header-text-c,
+  .header-text-e {
+    margin: 40px auto;
+  }
+
+  .desktop-nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .social-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content:flex-end;
+    padding-right: 100px;
+    background-color: #272a31;
+  }
+
+  .custom-nav-brand {
+    margin-left: 120px;
+  }
+
+  .social-nav > * {
+    margin: 10px ;
+    text-decoration: none;
+    color: #fff;
+  }
+
+  .social-nav > *:hover {
+    color: #ec5242;
+  }
+
+  .inside-desktop-nav {
+    display: flex !important;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding-right: 20px;
+  }
+
+  .inside-desktop-nav ul > * {
+    margin: 0;
+    padding: 5px 0 5px 10px;
+  }
+
+  .special-list {
+    border: 2px solid #ec5242;
+  }
+
+  .top-section {
+    background-image: url("../../images/desktop-bg.png");
+    background-repeat: no-repeat;
+  }
+
+  .desktop-custom-head {
+    width: 60%;
+    padding-left: 0;
+    margin-left: 180px;;
+    padding-right: 90px;
+  }
+
+  .desktop-head {
+    width: 60%;
+  }
+
+  .outer-bottom-partner-head {
+    margin: 0;
+  }
 }
 
 .middle-section {
@@ -105,6 +191,25 @@ header {
   height: 120px;
 }
 
+.bottom-partner-head {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+.bottom-partner-head hr {
+  width: 30%;
+  color: #ec5242;
+  margin: 15px auto;
+}
+
+.bottom-partner-head h2 {
+  margin: 50px auto;
+  color: #fff;
+}
+
 .top-program-2 img {
   height: inherit;
   background-color: #fff;
@@ -124,7 +229,8 @@ header {
   justify-content: center;
   text-align: center;
   border: 3px solid red;
-  margin: 20px;
+  width: 80%;
+  margin: 10px auto;
   height: 250px;
 }
 
@@ -208,6 +314,7 @@ header {
 
 .patners {
   background-color: #000;
+  opacity: 1;
   height: 400px;
 }
 
@@ -229,6 +336,81 @@ header {
   margin: 50px 5px 10px 5px;
 }
 
+@media screen and (min-width: 768px) {
+  /* .middle-section {
+    width: 60%;
+    text-align: center;
+  } */
+  .top-program-2b {
+    width: 40%;
+  }
+
+  .middle-section-container {
+    padding-left: 20px;
+    width: 60%;
+    text-align: center;
+  }
+
+  /* .inner-middle-section-container {
+    text-align: center;
+    margin: auto;
+    padding-left: 40px;
+  } */
+
+  .top-program {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 15px;
+  }
+
+  .top-program-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 60%;
+    text-align: center;
+    column-gap: 20px;
+    margin: 3px auto;
+    padding: 20px
+  }
+
+  .top-program-2 {
+    width: 50%;
+    text-align: center;
+    margin: 10px auto;
+  }
+
+  .top-program-2 p {
+    font-size: 12px;
+    line-height: 14px;
+  }
+
+  #middle-section-btn {
+    display: none;
+  }
+
+  #desktop-middle-section-btn {
+    display: flex;
+    margin: 20px auto;
+    background-color: #none;
+    text-align: center;
+    width: 30%;
+  }
+
+  #desktop-middle-section-btn  a {inner-middle-section-containe
+    color: #fff;
+  }
+
+  .show-more {
+    display: none;
+  }
+
+  .bottom-partner-head {
+    width: 100%;
+  }
+}
+
 /* footer section */
 footer {
   display: flex;
@@ -241,4 +423,20 @@ footer {
 
 #hide {
   display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .foot,
+  .foota,
+  .footb {
+    text-align: center;
+    margin: 50px 5px 10px 5px;
+  }
+
+  .footer-container {
+    text-align: center;
+    margin: 40px auto;
+    width: 95%;
+    margin-left: 60px;
+  }
 }
