fix linter errors

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -398,7 +398,7 @@ header {
     width: 30%;
   }
 
-  #desktop-middle-section-btn  a {inner-middle-section-containe
+  #desktop-middle-section-btn  a {
     color: #fff;
   }
 
