--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -96,7 +96,7 @@ header {
   .social-nav {
     display: flex;
     flex-direction: row;
-    justify-content:flex-end;
+    justify-content: flex-end;
     padding-right: 100px;
     background-color: #272a31;
   }
@@ -106,9 +106,14 @@ header {
   }
 
   .social-nav > * {
-    margin: 10px ;
+    margin: 10px
     text-decoration: none;
     color: #fff;
+  }
+
+  .inside-desktop-nav ul > * {
+    margin: 0;
+    padding: 5px 0 5px 10px;
   }
 
   .social-nav > *:hover {
@@ -120,11 +125,6 @@ header {
     flex-direction: row;
     justify-content: flex-end;
     padding-right: 20px;
-  }
-
-  .inside-desktop-nav ul > * {
-    margin: 0;
-    padding: 5px 0 5px 10px;
   }
 
   .special-list {
@@ -139,7 +139,7 @@ header {
   .desktop-custom-head {
     width: 60%;
     padding-left: 0;
-    margin-left: 180px;;
+    margin-left: 180px;
     padding-right: 90px;
   }
 
@@ -372,7 +372,7 @@ header {
     text-align: center;
     column-gap: 20px;
     margin: 3px auto;
-    padding: 20px
+    padding: 20px;
   }
 
   .top-program-2 {
@@ -393,12 +393,12 @@ header {
   #desktop-middle-section-btn {
     display: flex;
     margin: 20px auto;
-    background-color: #none;
+    background-color: none;
     text-align: center;
     width: 30%;
   }
 
-  #desktop-middle-section-btn  a {
+  #desktop-middle-section-btn a {
     color: #fff;
   }
 
