Implement dynamic JS for the features section

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,3 +1,19 @@
+@import url("https://fonts.cdnfonts.com/css/cocogoose");
+@import url("https://fonts.cdnfonts.com/css/Lato");
+
+:root {
+  --font-family-lato: "Lato", sans-serif;
+  --font-family-coco: "COCOGOOSE", sans-serif;
+  --main-orange-color: #ec5242;
+  --main-dark-color: #272a31;
+  --main-gray-color: #d3d3d3;
+}
+
+body {
+  font-family: var(--font-family-lato);
+  color: var(--main-dark-color);
+}
+
 .top-section {
   background-image: url("../../images/3.jpeg");
   background-repeat: no-repeat;
@@ -42,14 +58,15 @@ header {
   font-size: 20px;
   font-weight: bold;
   line-height: 32px;
-  color: #ec5242;
+  color: var(--main-orange-color);
 }
 
 .header-text-b {
   font-size: 35px;
   font-weight: bolder;
   line-height: 50px;
-  color: #ec5242;
+  color: var(--main-orange-color);
+  font-family: var(--font-family-coco);
 }
 
 .header-tect-c-div {
@@ -337,10 +354,6 @@ header {
 }
 
 @media screen and (min-width: 768px) {
-  /* .middle-section {
-    width: 60%;
-    text-align: center;
-  } */
   .top-program-2b {
     width: 40%;
   }
@@ -350,12 +363,6 @@ header {
     width: 60%;
     text-align: center;
   }
-
-  /* .inner-middle-section-container {
-    text-align: center;
-    margin: auto;
-    padding-left: 40px;
-  } */
 
   .top-program {
     display: flex;
